--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <!-- Social -->
       <section>
         <ul>
-          <li>Twitter</li>
-          <li>LinkedIn</li>
-          <li>GitHub</li>
+          <li><img src="images/twitter_icon.png" />Twitter</li>
+          <li><img src="images/linkedIn_icon.png" />LinkedIn</li>
+          <li><img src="images/Octocats/Octocat/Octocat.png"GitHub</li>
         </ul>
       </section>
 
