--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
           <li><img src="images/twitter_icon.png" />Twitter</li>
           <li><img src="images/linkedIn_icon.png" />LinkedIn</li>
-          <li><img src="images/Octocats/Octocat/Octocat.png"GitHub</li>
+          <li><img src="images/Octocats/Octocat/Octocat.png" />GitHub</li>
         </ul>
       </section>
 
