--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
       <meta charset="utf-8">
+      <!-- Stylesheets -->
+      <link type="text/css" rel="stylesheet" href="styles/styles.css">
       <title>Our First GitHub Project</title>
   </head>
 
@@ -12,7 +14,7 @@
       <h1>Marcine Kelly</h1>
       <!-- Bio -->
       <section>
-        <p>Hi! This is a short bio about me blah blah blah</p>
+        <p>Hi! This is a short bio about me. I'm a Florida International senior student. Making this website at Local Hack Day!</p>
       </section>
       <!-- Social -->
       <section>
