--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
       <meta charset="utf-8">
       <!-- Stylesheets -->
+      <link rel="stylesheet" href="https://necolas.github.io/normalize.css/3.0.2/normalize.css">
       <link type="text/css" rel="stylesheet" href="styles/styles.css">
       <title>Our First GitHub Project</title>
   </head>
 
   <body>
       <!-- Picture -->
-      <div><img src="#" /></div>
+      <div class="profile"><img src="images/me.jpg" /></div>
       <!-- My name -->
       <h1>Marcine Kelly</h1>
       <!-- Bio -->
@@ -21,7 +22,7 @@
         <ul>
           <li><img src="images/twitter_icon.png" />Twitter</li>
           <li><img src="images/linkedIn_icon.png" />LinkedIn</li>
-          <li><img src="images/Octocats/Octocat/Octocat.png" />GitHub</li>
+          <li><img src="images\GitHub-Mark\GitHub-Mark\PNG\GitHub-Mark-32px.png" />GitHub</li>
         </ul>
       </section>
 
