css round pic corrected

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
   <body>
       <!-- Picture -->
-      <div class="profile"><img src="images/me.jpg" /></div>
+      <div class="profile"><img class="round-pic" src="images/me.jpg" /></div>
       <!-- My name -->
       <h1>Marcine Kelly</h1>
       <!-- Bio -->
-      <section>
+      <section class="bio">
         <p>Hi! This is a short bio about me. I'm a Florida International senior student. Making this website at Local Hack Day!</p>
       </section>
       <!-- Social -->
