icon text removed

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <p>Hi! This is a short bio about me. I'm a Florida International senior student. Making this website at Local Hack Day!</p>
       </section>
       <!-- Social -->
-      <section>
+      <section class="social">
         <ul>
-          <li><img src="images/twitter_icon.png" />Twitter</li>
-          <li><img src="images/linkedIn_icon.png" />LinkedIn</li>
-          <li><img src="images\GitHub-Mark\GitHub-Mark\PNG\GitHub-Mark-32px.png" />GitHub</li>
+          <li><img src="images/twitter_icon.png" /></li>
+          <li><img src="images/linkedIn_icon.png" /></li>
+          <li><img src="images\GitHub-Mark\GitHub-Mark\PNG\GitHub-Mark-32px.png" /></li>
         </ul>
       </section>
 
