--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <!-- Social -->
       <section class="social">
         <ul>
-          <li><img src="images/twitter_icon.png" /></li>
-          <li><img src="images/linkedIn_icon.png" /></li>
-          <li><img src="images\GitHub-Mark\GitHub-Mark\PNG\GitHub-Mark-32px.png" /></li>
+          <li><a href="http://www.twitter.com"><img src="images/twitter_icon.png" /></a></li>
+          <li><a href="http://www.linkedin.com"><img src="images/linkedIn_icon.png" /></a></li>
+          <li><a href="http://www.github.com"><img src="images\GitHub-Mark\GitHub-Mark\PNG\GitHub-Mark-32px.png" /></a></li>
         </ul>
       </section>
 
